--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.3.0",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
+    "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
